--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends 'findjobs.html' %}
 
-{% block title %}SignIn{% endblock %}
+{% block title %}Signup{% endblock %}
 {% block content %}
 <div class="row">
   <div class="col-md-3">
@@ -37,12 +37,12 @@
 
         </p>
 
-        <p>
-                {{form.remember_me.label }}<br>
-                {{form.remember_me }}<br>
+          <p>
+                {{form.password_check.label }}<br>
+                {{form.password_check }}<br>
 
 
-
+        </p>
         <p>
                 {{form.submit.label }}<br>
                 {{form.submit }}<br>
@@ -52,7 +52,7 @@
 
 
     </form>
-    <p><a href="{{ url_for('signup') }}">Signup here</a></p>
+    <p>Have an account <a href="{{ url_for('login') }}">login here </a></p>
 
 
 </div>
