--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -22,18 +22,23 @@
 
 
 <div>
-    <form action="" method="post">
+    <form action="{{ url_for('login.login_process') }}" method="post">
          {{ form.hidden_tag() }}
         <p>
                 {{ form.email.label }}<br>
                 {{ form.email }}<br>
+                {% for error in form.email.errors %}
+                <span style="color: red;">{{error}}</span>
+                {% endfor %}
 
 
         </p>
         <p>
                 {{form.password.label }}<br>
                 {{form.password }}<br>
-
+                {% for error in form.password.errors %}
+                <span style="color: red;">{{error}}</span>
+                {% endfor %}
 
         </p>
 
