--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -24,6 +24,15 @@
 <div>
     <form action="{{ url_for('login.signup_process') }}" method="post">
          {{ form.hidden_tag() }}
+          <p>
+                {{ form.name.label }}<br>
+                {{ form.name }}<br>
+                {% for error in form.name.errors %}
+                <span style="color: red;">{{error}}</span>
+                {% endfor %}
+
+
+        </p>
         <p>
                 {{ form.email.label }}<br>
                 {{ form.email }}<br>
