--- a/app/templates/findjobs.html
+++ b/app/templates/findjobs.html
@@ -19,6 +19,7 @@
 
 <a href="{{ url_for('findjobs') }}">Find Jobs</a>
 {% if current_user.is_authenticated %}
+<a href="{{ url_for('upload') }}">Upload</a>
 <a href="{{ url_for('profile') }}">Profile</a>
 <a href="{{ url_for('login.logout') }}">Logout</a>
 {% else %}
