db relation complete

--- a/app/templates/findjobs.html
+++ b/app/templates/findjobs.html
@@ -17,7 +17,7 @@
 
 
 
-<a href="{{ url_for('findjobs') }}">Find Jobs</a>
+<a href="{{ url_for('findjobs') }}">Gallery</a>
 {% if current_user.is_authenticated %}
 <a href="{{ url_for('upload') }}">Upload</a>
 <a href="{{ url_for('profile') }}">Profile</a>
