--- a/app/templates/findjobs.html
+++ b/app/templates/findjobs.html
@@ -20,7 +20,7 @@
 <a href="{{ url_for('display.show_post') }}">Gallery</a>
 {% if current_user.is_authenticated %}
 <a href="{{ url_for('upload') }}">Upload</a>
-<a href="{{ url_for('profile') }}">Profile</a>
+<a href="{{ url_for('profile.display_profile') }}">Profile</a>
 <a href="{{ url_for('login.logout') }}">Logout</a>
 {% else %}
 <a href="{{ url_for('login') }}">SignIn</a>
@@ -34,11 +34,10 @@
     <a href="{{url_for('postextends',id=post.id)}}">
     <div>
     <br><img src="{{ post.pic }}" width="150px" height="150px">
-    </div>
-    <div><p>Likes: {{post.likes}}</p></div>
+    </div></a>
+     <div><p>Likes: <a href="{{url_for('display.likes',postid=post.id)}}">{{post.likes}}</a> </p></div>
     <div><p>Pet name: {{post.name}}</p></div>
-    <div><p>Owner: {{post.author.name}}</p></div>
-    </a>
+    <div><p>Owner: <a href="{{url_for('profile.profile_view',author=post.author.id)}}">{{post.author.name}}</p></div>
     </div>
 
 
