--- a/app/templates/findjobs.html
+++ b/app/templates/findjobs.html
@@ -38,6 +38,10 @@
      <div><p>Likes: <a href="{{url_for('display.likes',postid=post.id)}}">{{post.likes}}</a> </p></div>
     <div><p>Pet name: {{post.name}}</p></div>
     <div><p>Owner: <a href="{{url_for('profile.profile_view',author=post.author.id)}}">{{post.author.name}}</p></div>
+    {% if current_user.id == post.author.id %}
+        <a href="{{url_for('upload.edit_post',id=post.id)}}">edit </a>
+        <a href="{{url_for('upload.delete_post',id=post.id)}}">delete</a>
+    {% endif %}
     </div>
 
 
