--- a/app/templates/userprofile.html
+++ b/app/templates/userprofile.html
@@ -29,6 +29,10 @@
     <div><p>Pet name: {{post.name}}</p></div>
     <div><p>Owner: <a href="{{url_for('profile.profile_view',author=post.author.id)}}">{{post.author.name}}</a></p></div>
     </a>
+        {% if current_user.id == post.author.id %}
+            <a href="{{url_for('upload.edit_post',id=post.id)}}">edit </a>
+            <a href="{{url_for('upload.delete_post',id=post.id)}}">delete</a>
+        {% endif %}
     </div>
 
 
