--- a/app/templates/deletepost.html
+++ b/app/templates/deletepost.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <h4>DO you want to delete {{post.name }}'s Post ?</h4>
-<img src="{{post.pic}}" height="150px" width="150px"><br>
+<img src="{{json.loads(post.pic)['url']}}" height="150px" width="150px"><br>
 <a href="{{url_for('upload.delete_process')}}">YES</a>
 <a href="{{request.referrer}}">NO</a>
 
