--- a/app/static/main.css
+++ b/app/static/main.css
@@ -8,8 +8,9 @@
 width: 50%;
 margin: 0 auto;
 padding: 0;
-background: #fff;
+background-color: rgb(22, 24, 27);
 float: center;
+color: white;
 }
 
 @media only screen and (max-width: 600px) {
@@ -26,7 +27,6 @@ float: center;
 h1.title {
 
 margin: 0px;
-background-color: #3385ff;
 text-align: center;
 color: white;
 
@@ -40,41 +40,49 @@ color: white;
   }
 }
 input[type=button], input[type=submit], input[type=reset] {
-  background-color: #4CAF50;
+  background-color: rgb(45, 45, 45);
   border: none;
-  color: white;
   padding: 16px 32px;
   text-decoration: none;
   margin: 4px 2px;
   cursor: pointer;
 }
+#submit:hover{
+background-color: rgb(255, 85, 11);
 
+}
 textarea {
 resize: none;
 width: 100%;
   height: 150px;
   padding: 12px 20px;
-  box-sizing: border-box;
-  border: 2px solid #ccc;
+color: white;
+  border-width:0px;
+border:none;
   border-radius: 4px;
-  background-color: #f8f8f8;
+  background-color: rgb(45, 45, 45);
 
 
 }
-input[type=text]:focus {
-  border: 3px solid #555;
-}
+
 input {
-
+    background-color: rgb(45, 45, 45);
     width: 100%;
     padding: 12px 20px;
   margin: 8px 0;
+  color: white;
   box-sizing: border-box;
+  border-width:0px;
+  border:none;
 }
 
 input[type="file"] {
     display: none;
 }
+input[type="checkbox"]{
+width: 0;
+}
+
 
 .custom-file-upload {
 background-color: #ff3300;
@@ -131,7 +139,199 @@ background-color: red;
 body{
 
  font-family: "Lucida Console", "Courier New", monospace;
+     overflow-x: hidden;
+
+
+}
+h1.name {
+font-size: 50px;
+  font-weight: bold;
+color: white;
+text-transform: capitalize;
+margin: 0  auto;
+
+padding: 10px;
+text-align: center;
+width: 50%;
 
 
 
+}
+@media only screen and (max-width: 600px) {
+  h1.name {
+    width: 100%;
+    padding: 10px;
+    font-size: 37px;
+    }
+}
+.editprofile {
+
+width: 50%;
+margin: 0  auto;
+
+
+
+ }
+
+.editprofile a{
+}
+
+
+
+
+.btnedit {
+color: #5cd65c ;
+
+
+}
+.btnedit:hover {
+color: green ;
+
+
+}
+.btndel {
+color: #ff4d4d;
+
+
+}
+.btndel:hover {
+color: red;
+
+
+}
+
+h2.paddo{
+font-size: 50px;
+color: #77b300;
+margin: 0  auto;
+
+padding: 10px;
+text-align: center;
+width: 50%;
+
+
+}
+@media only screen and (max-width: 600px) {
+    h2.paddo{
+    width: 100%;
+    font-size: 38px;
+
+    }
+
+
+}
+.myposts {
+
+background-color: #white;
+
+}
+
+.clickme {
+    background-color: rgb(255, 85, 11);
+    padding: 8px 20px;
+    text-decoration: none !important;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    color: white;
+
+}
+.clickme:hover {
+
+background-color: rgba(255, 85, 11, .9);
+}
+
+
+
+@media only screen and (max-width: 600px) {
+.clickme {
+    font-size: 4.1vw;
+}
+
+
+}
+
+a{
+text-decoration: none !important;
+}
+
+ a:hover {
+
+color: white;
+
+}
+
+
+.card-img-top {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.card{
+ background-color: rgb(22, 24, 27);
+    border-radius: 5px;
+    border: 2px solid rgb(255, 85, 11);
+}
+.card:hover{
+box-shadow: inset 0 0 10px red;
+}
+
+
+
+
+}
+
+.card-header, .card-footer{
+background-color: rgb(22, 24, 27);
+
+}
+
+p.submit :hover{
+background-color: rgb(255, 85, 11);
+
+}
+
+.loginform{
+
+width: 50%;
+margin: 0 auto;
+padding: 0;
+background-color: rgb(22, 24, 27);
+float: center;
+color: white;
+
+}
+@media only screen and (max-width: 600px) {
+.loginform{
+
+width: 100%;
+
+}
+.p-5{
+padding: 15px 15px 15px 15px !important;
+
+}
+}
+
+
+
+hr{
+border: 1px solid white;
+
+}
+
+footer{
+margin-top: 100px;
+text-align: center;
+  padding: 15px;
+  background-color: rgb(10, 10, 18);;
+  color: white;
+}
+
+.copyfoot{
+right: 0;
+
+font-size: 13px;
+filter: brightness(80%);
 }
