--- a/app/templates/findjobs.html
+++ b/app/templates/findjobs.html
@@ -21,9 +21,9 @@
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='main.css')}}">
 
 </head>
-<body class= "bg-light">
+<body style="background-color: rgb(22, 21, 31);">
 <div class="container-fluid">
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+<nav class="navbar navbar-expand-sm navbar-dark fixed-top shadow-sm p-3" style="background-color: rgb(38, 38, 38); " >
     <a class="navbar-brand" href="#">PETBOOK</a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
@@ -56,23 +56,24 @@
     </div>
 </nav>
 </div>
+<br><br>
 {% block content %}
 
 <div class="container-fluid-sm">
 <div class="row">
 {% for post in posts %}
-    <div class=" card mx-5 mt-5 bg-light shadow" style="width: 18rem;">
-    <h6 class="card-header"><a href="{{url_for('profile.profile_view',author=post.author.id)}}">{{post.author.name.capitalize()}}</a></h6>
+    <div class="card mx-5 mt-5 shadow" style="width: 18rem;">
+    <h6 class="card-header"><a href="{{url_for('profile.profile_view',author=post.author.id)}}" style="color: white;">{{post.author.name.capitalize()}}</a></h6>
     <img class ="card-img-top" src="{{ json.loads(post.pic)['url'] }}">
         <div class="card-body">
-         <center><h5 class="card-text" style="font-family: 'Sans-serif'; color: #cc00ff;">{{post.name.capitalize()}}</h5></center>
-         <a href="{{url_for('display.likes',postid=post.id)}}" style="text-decoration: none; color: inherit;"><i class="{{'text-blue-600' if current_user in post.liked_by else 'text-gray-400'}} fa fa-thumbs-o-up fa-2x"></i>{{post.likes}}</a>
+         <center><h5 class="card-text" style="font-family: 'Sans-serif'; color: rgb(255, 85, 11); ">Hi! I am {{post.name.capitalize()}}</h5></center>
+         <a href="{{url_for('display.likes',postid=post.id)}}" style="text-decoration: none; color: white;display: block; margin-top: 20px;"><i class="{{'text-blue-600' if current_user in post.liked_by else 'text-gray-400'}} fa fa-thumbs-o-up fa-2x"></i>{{post.likes}}</a>
          </div>
       <div class="card-footer">
     {% if current_user.id == post.author.id %}
 
-        <a class="btn btn-primary" href="{{url_for('upload.edit_post',id=post.id)}}">edit </a>
-        <a class="btn btn-primary" href="{{url_for('upload.delete_post',id=post.id)}}">delete</a>
+        <a class="btnedit" href="{{url_for('upload.edit_post',id=post.id)}}"><i class="fa fa-pencil-square-o fa-2x" ></i></a>
+        <a class="btndel" href="{{url_for('upload.delete_post',id=post.id)}}" style="position: absolute; right: 20px;"><i class="fa fa-trash  fa-2x" ></i></a>
 
     {% endif %}
 
@@ -83,5 +84,19 @@
 </div>
 </div>
     {% endblock %}
+
+<footer class="page-footer">
+
+    <div>
+        <a href="https://www.linkedin.com/in/rajesh-singh-94aa76207/" > <i style="color: rgb(33, 37, 41) !important;" class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+        <a href="https://github.com/Rajeshsingh127"><i class="fa fa-github-square fa-2x" style="color: rgb(33, 37, 41) !important;" aria-hidden="true"></i></a>
+
+
+    </div>
+
+    <div class="copyfoot">2021 © Rajesh Singh. All Right Reserved.
+
+
+</footer>
 </body>
 </html>
