--- a/app/static/main.css
+++ b/app/static/main.css
@@ -51,6 +51,14 @@ input[type=button], input[type=submit], input[type=reset] {
 background-color: rgb(255, 85, 11);
 
 }
+input[type=submit]:hover{
+background-color: rgb(255, 85, 11);
+
+
+}
+
+
+
 textarea {
 resize: none;
 width: 100%;
@@ -136,11 +144,11 @@ background-color: red;
 	color: #fff;
 }
 
+
 body{
 
- font-family: "Lucida Console", "Courier New", monospace;
+ font-family: "Lucida Console", "Courier New", Sans Serif;
      overflow-x: hidden;
-
 
 }
 h1.name {
@@ -334,4 +342,95 @@ right: 0;
 
 font-size: 13px;
 filter: brightness(80%);
+}
+
+.brrr{
+color: white;
+}
+
+.mainimg{
+width: 30%;
+height: 400px;
+margin: 0 auto;
+display: block;
+border-radius: 16px;
+background-color: rgb(9, 8, 15);
+box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.5);
+
+}
+
+@media only screen and (max-width: 600px) {
+.mainimg{
+width: 90%;
+height: 300px;
+}
+h1.bruh{
+font-size: 34px;
+
+
+}
+
+h2.bruh{
+font-size: 20px;
+}
+
+
+.com {
+font-size: 4vw;
+
+}
+}
+
+
+
+
+
+.shadow{
+box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.5) !important;
+
+
+
+}
+
+.extends{
+color: #77b300;
+font-weight: bold;
+text-align: center;
+font-size: 25px;
+}
+
+.indv{
+
+margin:0 auto;
+padding: 15px 20px;
+background-color: rgb(45, 45, 45);;
+color: white;
+
+}
+
+.yoyo{
+display: flex;
+    justify-content: space-between;
+}
+
+@media only screen and (max-width: 600px) {
+.extendonly, .yoyo{
+    font-size: 5vw !important;
+
+
+}
+.right{
+    font-size: 4vw;
+
+filter: brightness(80%);
+
+}
+}
+
+.extendonly{
+color: #77b300;
+font-weight: bold;
+text-align: center;
+font-size: 17px;
+
 }
