--- a/app/templates/confirm.html
+++ b/app/templates/confirm.html
@@ -2,15 +2,15 @@
 
 {% block title %}Confirm Delete{% endblock %}
 {% block content %}
-
+<div class=" upload p-3 shadow">
 <form method="post" action="{{url_for('profile.delete')}}">
-    Confirm your password<br>
+    <p class="brrr">Confirm your password</p><br>
     <input type="password", required, name="password_confirm">
     <br>
     <input type="submit" value="submit">
 
 
 </form>
-
-
+</div>
+<br><br><br><br><br>
 {% endblock %}
