--- a/app/templates/findjobs.html
+++ b/app/templates/findjobs.html
@@ -50,13 +50,14 @@
     </li>
 {% endif %}
     <li class="nav-item">
-        <a class="nav-link" href="#">About Us</a>
+        <a class="nav-link" href="#">About Me</a>
     </li>
   </ul>
     </div>
 </nav>
 </div>
 <br><br>
+<div class="forfoot" style="min-height: calc(100vh - 40px);">
 {% block content %}
 
 <div class="container-fluid-sm">
@@ -64,9 +65,9 @@
 {% for post in posts %}
     <div class="card mx-5 mt-5 shadow" style="width: 18rem;">
     <h6 class="card-header"><a href="{{url_for('profile.profile_view',author=post.author.id)}}" style="color: white;">{{post.author.name.capitalize()}}</a></h6>
-    <img class ="card-img-top" src="{{ json.loads(post.pic)['url'] }}">
+    <a href="{{url_for('postextends', id=post.id)}}"><img class ="card-img-top" src="{{ json.loads(post.pic)['url'] }}">
         <div class="card-body">
-         <center><h5 class="card-text" style="font-family: 'Sans-serif'; color: rgb(255, 85, 11); ">Hi! I am {{post.name.capitalize()}}</h5></center>
+         <center><h5 class="card-text" style="font-family: 'Sans-serif'; color: rgb(255, 85, 11); ">Hi! I am {{post.name.capitalize()}}</h5></center></a>
          <a href="{{url_for('display.likes',postid=post.id)}}" style="text-decoration: none; color: white;display: block; margin-top: 20px;"><i class="{{'text-blue-600' if current_user in post.liked_by else 'text-gray-400'}} fa fa-thumbs-o-up fa-2x"></i>{{post.likes}}</a>
          </div>
       <div class="card-footer">
@@ -84,7 +85,7 @@
 </div>
 </div>
     {% endblock %}
-
+</div>
 <footer class="page-footer">
 
     <div>
@@ -94,8 +95,7 @@
 
     </div>
 
-    <div class="copyfoot">2021 © Rajesh Singh. All Right Reserved.
-
+    <div class="copyfoot">2021 © Rajesh Singh. All Right Reserved.</div>
 
 </footer>
 </body>
