--- a/app/templates/userprofile.html
+++ b/app/templates/userprofile.html
@@ -23,10 +23,10 @@
 {% for post in user.posts %}
     <div class=" card mx-5 mt-5 shadow" style="width: 18rem;">
     <h6 class="card-header"><a href="{{url_for('profile.profile_view',author=post.author.id)}}" style="color: white;">{{post.author.name.capitalize()}}</a></h6>
-    <img class ="card-img-top" src="{{ json.loads(post.pic)['url'] }}">
+     <a href="{{url_for('postextends', id=post.id)}}"><img class ="card-img-top" src="{{ json.loads(post.pic)['url'] }}">
         <div class="card-body">
-         <center><h5 class="card-text" style="font-family: 'Sans-serif';color: rgb(255, 85, 11); ">Hi! I am {{post.name.capitalize()}}</h5></center>
-         <a href="{{url_for('display.likes',postid=post.id)}}" style="text-decoration: none; color: white;display: block; margin-top: 20px;"><i class="{{'text-blue-600' if current_user in post.liked_by else 'text-gray-400'}} fa fa-thumbs-o-up fa-2x"></i>{{post.likes}}</a>
+         <center><h5 class="card-text" style="font-family: 'Sans-serif';color: rgb(255, 85, 11); ">Hi! I am {{post.name.capitalize()}}</h5></center></a>
+        <a href="{{url_for('display.likes',postid=post.id)}}" style="text-decoration: none; color: white;display: block; margin-top: 20px;"><i class="{{'text-blue-600' if current_user in post.liked_by else 'text-gray-400'}} fa fa-thumbs-o-up fa-2x"></i>{{post.likes}}</a>
          </div>
       <div class="card-footer">
     {% if current_user.id == post.author.id %}
