--- a/app/static/main.css
+++ b/app/static/main.css
@@ -147,7 +147,7 @@ background-color: red;
 
 body{
 
- font-family: "Lucida Console", "Courier New", Sans Serif;
+ font-family: "Lucida Console", Sans Serif;
      overflow-x: hidden;
 
 }
