--- a/app/static/main.css
+++ b/app/static/main.css
@@ -392,11 +392,13 @@ box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.5) !important;
 
 }
 
-.extends{
-color: #77b300;
-font-weight: bold;
-text-align: center;
-font-size: 25px;
+p.extends{
+
+    color: #77b300;
+    font-weight: bold;
+    text-align: center;
+    font-size: 25px;
+
 }
 
 .indv{
