--- a/app/static/main.css
+++ b/app/static/main.css
@@ -437,3 +437,66 @@ text-align: center;
 font-size: 17px;
 
 }
+
+.aboutme{
+font-size: 70px;
+color: white;
+text-align: center;
+
+}
+
+.aboutmeimg{
+width: 50%;
+height: 530px;
+object-fit: cover;
+object-position: 10% 30%;
+margin: 35px;
+float: left;
+
+}
+.wow{
+color: white;
+font-size: 25px;
+
+filter: brightness(80%);
+}
+.wowo{
+color: white;
+font-size: 18px;
+filter: brightness(80%);
+}
+
+@media only screen and (max-width: 600px) {
+.aboutme{
+font-size: 27px;
+color: white;
+text-align: center;
+
+}
+
+.aboutmeimg{
+width: 90%;
+height: 200px;
+object-fit: cover;
+object-position: 10% 30%;
+margin: 15px;
+
+}
+.wow{
+color: white;
+font-size: 22px;
+filter: brightness(80%);
+
+}
+.wowo{
+color: white;
+font-size: 15px;
+filter: brightness(80%);
+
+}
+.abouttext{
+margin-left: 15px;
+}
+
+
+}
