--- a/app/templates/extended.html
+++ b/app/templates/extended.html
@@ -12,7 +12,7 @@
 <p class="extends">{{post.author.name}}</p>
 
 <p style="color: white; text-align: center;">ABOUT</p>
-<p  class="extends">{{post.about}}</p>
+<p  class="extends textabout">{{post.about}}</p>
 
     <center>{% if current_user.id == post.author.id %}
             <a class="clickme" href="{{url_for('upload.edit_post',id=post.id)}}">edit </a>&nbsp;&nbsp;
